<resources>
    <string name="app_name" translatable="false">FreshMandi</string>

    <string name="check_internet">"No Internet Connection! please try again"</string>

    <string name="Roboto_Regular" translatable="false">Roboto_Regular</string>
    <string name="Roboto_Medium" translatable="false">Roboto_Medium</string>
    <string name="Roboto_Bold" translatable="false">Roboto_Bold</string>

    <!-- TODO: Remove or change this placeholder text -->

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--non-translation-->
    <string name="hindi" translatable="false">हिंदी</string>
    <string name="english" translatable="false">English</string>
    <string name="gujarati" translatable="false">ગુજરાતી</string>


    <string name="Change_Password">Change Password</string>
    <string name="name">Name</string>
    <string name="freebies">Freebies</string>
    <string name="search">Search</string>
    <string name="select_your_language">Select your Language</string>
    <string name="register">Register</string>
    <string name="my_order">My Order</string>
    <!-- <string name="mrp">MRP :</string>
    <string name="moq">MOQ :</string>
    <string name="margins">Margins :</string>
    <string name="email_address">Email Address</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="we_will_send_you_an_one_time_password">we will send you an One Time Password</string>
    <string name="categories">Categories</string>
    <string name="trade_offers">Trade Offers</string>
    <string name="offers">Offers</string>
    <string name="today_s_special">Today\'s Special</string>
    <string name="base_category">Base Category</string>
    <string name="add">ADD</string>

    <string name="My_Order">My Order</string>
    <string name="My_Favourite">My Favourite</string>
    <string name="Become_a_Prime_member">Become a Prime member</string>
    <string name="Profile">Profile</string>
    <string name="Change_Language">Change Language</string>

    <string name="Contact_Us">Contact Us</string>
    <string name="Logout">Logout</string>
    <string name="client_id">Client Id (Optional)</string>
    <string name="verify_your_number">verify your Number</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="change_number">Change Number</string>
    <string name="or">OR</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="enter_new_password">Enter New Password</string>-->
    <string name="todo">TODO</string>
    <!-- <string name="exiting_user_login_here">Exiting User? Login here</string>
    <string name="new_user_register_here">New User? Register here</string>-->
    <string name="welcome_to_ngrocery_shopping">Welcome to\nGrocery shopping</string>
    <string name="login_in_to_grocery_app">Login in to Grocery App</string>
    <string name="enter_email_amp_password_to_continue"><![CDATA[Enter email & password to continue]]></string>
    <string name="login_1">Login</string>
    <string name="login_using_otp">Login Using OTP</string>
    <string name="your_mobile_number">Your mobile number</string>
    <string name="enter">Enter</string>
    <string name="register_in_to_grocery_app">Register in to Grocery App</string>
    <string name="verify_number">Verify Number</string>
    <string name="we_have_sent_otp_on_your_mobile_number">We have sent OTP on Your Mobile Number</string>
    <string name="who_are_you">Who Are You?</string>
    <string name="all_categories">All Categories</string>
    <string name="product_detail">Product Detail</string>
    <string name="nihar_santi_amla_10_mrp" translatable="false">Nihar Santi Amla 10 MRP</string>
    <string name="mrp">MRP :</string>
    <string name="moq">MOQ :</string>
    <string name="margins">Margins :</string>
    <string name="favourite">Favourite</string>
    <string name="add_to_basket">Add to Basket</string>
    <string name="profile">Profile</string>
    <string name="dummy">Dummy</string>
    <string name="change">Change</string>
    <string name="preference">Preference</string>
    <string name="shop_details">Shop Details</string>
    <string name="rate_the_app">Rate the App</string>
    <string name="help_us_improve_our_service">Help Us improve our service</string>
    <string name="how_would_you_rate_our_app">How would you rate our App?</string>
    <string name="enter_your_valuable_feedback">Enter Your valuable feedback</string>
    <string name="type_here">Type here..</string>
    <string name="my_dream">My Dream</string>
    <string name="retailer">Retailer</string>
    <string name="customer">Customer</string>
    <string name="email_address">Email Address</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="missed_something">Missed Something?</string>
    <string name="all">All</string>
    <string name="discount">Discount</string>
    <string name="shop_name">Shop Name:</string>
    <string name="gst_no">GST No:</string>
    <string name="licence_no">Licence No:</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="we_will_send_you_an_one_time_password">we will send you an One Time Password</string>
    <string name="order_id_186860">Order ID: 186860</string>
    <string name="address_">Address:</string>
    <string name="inactive">Inactive</string>
    <string name="congratulation">Congratulation</string>
    <string name="order_placed_successfully">Order Placed Successfully</string>
    <string name="order_amount_3450">Order Amount : 3450</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="select_quantities_for">Select Quantities for</string>
    <string name="arsivad_atta_206_mrp_5_kg">Arsivad Atta 206 MRP 5 kg</string>
    <string name="rs">RS</string>
    <string name="sort_by">Sort by</string>
    <string name="price">Price:</string>
    <string name="low_to_high">Low to High</string>
    <string name="high_to_low">High to Low</string>
    <string name="groceries">Groceries</string>
    <string name="categories">Categories</string>
    <string name="trade_offers">Trade Offers</string>
    <string name="offers">Offers</string>
    <string name="today_s_special">Today\'s Special</string>
    <string name="load_more">Load More</string>
    <string name="base_category">Base Category</string>
    <string name="no_offer_available">No Offer Available</string>
    <string name="no_data_found">No Data Found!</string>
    <string name="_2_items">2 items</string>
    <string name="sort">Sort</string>
    <string name="related_items">Related items</string>
    <string name="atta_amp_cereals"><![CDATA[Atta & Cereals]]></string>
    <string name="tea_amp_coffee"><![CDATA[Tea & coffee]]></string>
    <string name="add">ADD</string>
    <string name="buy_1_pcs">Buy 1 pcs</string>
    <string name="tata_agni_tea_55_mrp_250_gm">Tata Agni Tea 55 MRP 250 Gm</string>
    <string name="get_1_free">Get 1 Free</string>
    <string name="you_buy_your_1st_product_from_fresh_amp_fine"><![CDATA[You buy your 1st product from Fresh & Fine]]></string>
    <string name="buy">Buy</string>
    <string name="order_id">Order ID</string>
    <string name="ordered">Ordered</string>
    <string name="dispatched">Dispatched</string>
    <string name="view_detail">View Detail</string>
    <string name="fortune_sunflower">Fortune Sunflower</string>
    <string name="quantity_4">Quantity : 4</string>
    <string name="recycler_view" translatable="false">Recycler View</string>
    <string name="home">Home</string>
    <string name="checkout">Checkout</string>

    <string name="My_Order">My Order</string>
    <string name="My_Wallet">My Wallet</string>
    <string name="My_Dream">My Dream</string>
    <string name="My_Favourite">My Favourite</string>
    <string name="Become_a_Prime_member">Become a Prime member</string>
    <string name="Profile">Profile</string>
    <string name="Feedback">Feedback</string>
    <string name="Change_Language">Change Language</string>

    <string name="Contact_Us">Contact Us</string>
    <string name="Logout">Logout</string>
    <string name="client_id">Client Id (Optional)</string>
    <string name="welcome_to_fresh_and_fine">Welcome to Fresh and Fine</string>
    <string name="enter_by_otp">Enter by OTP</string>
    <string name="enter_otp_here">Enter OTP here</string>
    <string name="verify_your_number">verify your Number</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="change_number">Change Number</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="or">OR</string>
    <string name="enter_mobile_no">Enter Mobile Number :</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="enter_your_new_password">Enter your new Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="cancel">Cancel</string>
    <string name="exiting_user_login_here">Exiting User? Login here</string>
    <string name="new_user_register_here">New User? Register here</string>
    <string name="enter_shipping_address">Enter shipping address</string>
    <string name="notification">Notification</string>
    <string name="today">Today</string>
    <string name="clear_all">Clear all</string>
    <string name="pending">Pending</string>
    <string name="order_summary">Order Summary</string>
    <string name="status">Status</string>
    <string name="name_">Name:</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="billing_address">Billing Address</string>
    <string name="item_details">Item Details:</string>
    <string name="rs_500">Rs 500/-</string>
    <string name="lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry_lorem_ipsum_has_been_the_industry_s_standard">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard.</string>
    <string name="dummy_text_ever_since_the_1500s_when_an_unkno_wn_printer_took_a_galley_of_type_and_scrambled_it_to_make_a_type_specimen_book_it_has_survived_not_only_five_centuries_but">dummy text ever since the 1500s, when an unkno wn printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but</string>
    <string name="also_the_leap_into_electronic_typesetting_remaining_essentially_unchanged_it_was_popularised_in_the_1960s_with_the_release_of_letraset_sheets_contai_ning_lorem_ipsum_passages_and_more_recently_with_desktop_publishing">also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets contai ning Lorem Ipsum passages, and more recently with desktop publishing.</string>
    <string name="personal_information">Personal Information</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="save">Save</string>
    <string name="if_any_issue_please_contact_us">If any issue please contact us:</string>
    <string name="contact_us">Contact Us :</string>
    <string name="price_details">Price Details</string>
    <string name="simple_rupee">₹</string>


</resources>
