<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/splash_bg">

        <RelativeLayout
            android:id="@+id/rlLoginBG"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#90292929"
            android:visibility="gone" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_botton_rounded"
            android:paddingStart="@dimen/dp20"
            android:paddingLeft="@dimen/dp20"
            android:paddingEnd="@dimen/dp20"
            android:paddingRight="@dimen/dp20"
            android:paddingBottom="@dimen/dp50"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/edtEmail"
                style="@style/App_EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp30"
                android:drawableStart="@drawable/ic_email"
                android:drawableLeft="@drawable/ic_email"
                android:drawableTint="@color/green"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:paddingStart="-2dp"
                android:paddingLeft="-2dp"
                android:fontFamily="@font/roboto_medium"
                app:layout_constraintTop_toBottomOf="@id/tvcontinue"
                tools:targetApi="m" />

            <RelativeLayout
                android:id="@+id/rlPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp18"
                app:layout_constraintTop_toBottomOf="@id/edtEmail">

                <EditText
                    android:fontFamily="@font/roboto_medium"
                    android:id="@+id/edtPassword"
                    style="@style/App_EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:drawableStart="@drawable/ic_pass"
                    android:drawableLeft="@drawable/ic_pass"
                    android:drawableTint="@color/green"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingStart="-2dp"
                    android:paddingLeft="-2dp"
                    tools:targetApi="m" />

                <ImageView
                    android:id="@+id/ivPassword"
                    android:layout_width="@dimen/dp20"
                    android:layout_height="@dimen/dp20"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:paddingRight="@dimen/dp2"
                    android:src="@drawable/ic_hide_eye" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tvTop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/login_in_to_grocery_app"
                android:textColor="@color/black"
                android:textSize="@dimen/sp25"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvcontinue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/enter_email_amp_password_to_continue"
                android:textColor="@color/grey"
                android:textSize="@dimen/sp16"
                app:layout_constraintTop_toBottomOf="@id/tvTop" />

            <TextView
                android:id="@+id/tvForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp5"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/forgot_password"
                android:textColor="@color/light_grey"
                android:textSize="@dimen/sp14"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rlPass" />

            <TextView
                android:id="@+id/btnLogin"
                style="@style/App_active_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp5"
                android:layout_marginTop="@dimen/dp20"
                android:layout_marginRight="@dimen/dp5"
                android:layout_weight="1"
                android:text="@string/login_1"
                app:layout_constraintTop_toBottomOf="@id/tvForgotPassword" />

            <TextView
                android:id="@+id/tvOR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp10"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/or"
                android:textColor="@color/grey"
                android:textSize="@dimen/sp18"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnLogin" />

            <TextView
                android:id="@+id/btnOtpLogin"
                style="@style/App_active_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp5"
                android:layout_marginTop="@dimen/dp10"
                android:layout_marginRight="@dimen/dp5"
                android:text="@string/login_using_otp"
                app:layout_constraintTop_toBottomOf="@id/tvOR" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>