<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/splash_bg"
        tools:context=".activity.LoginByOTPActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/top_constraint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/green"
            android:paddingTop="@dimen/dp15"
            android:paddingBottom="@dimen/dp15"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="@dimen/dp25"
                android:layout_height="@dimen/dp25"
                android:layout_marginLeft="@dimen/dp10"
                android:src="@drawable/ic_back_arrow"
                android:tint="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/AppBarTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp20"
                android:text="@string/mobile_number"
                android:textColor="@color/white"
                android:textSize="@dimen/sp18"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/ivBack"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_botton_rounded"
            android:paddingStart="@dimen/dp20"
            android:paddingLeft="@dimen/dp20"
            android:paddingTop="@dimen/dp20"
            android:paddingEnd="@dimen/dp20"
            android:paddingRight="@dimen/dp20"
            android:paddingBottom="@dimen/dp50"
            app:layout_constraintTop_toBottomOf="@+id/top_constraint">

            <LinearLayout
                android:id="@+id/llMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp30"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/tvcontinue">

                <EditText
                    android:layout_marginRight="@dimen/dp15"
                    style="@style/App_EditTextStyle"
                    android:layout_width="@dimen/dp80"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/ic_down_arrow"
                    android:drawableTint="@color/grey"
                    android:focusable="false"
                    android:inputType="textEmailAddress"
                    android:text="+91"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:targetApi="m" />

                <EditText
                    android:id="@+id/edtMobile"
                    style="@style/App_EditTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/your_mobile_number"
                    android:inputType="number"
                    android:paddingStart="-1dp"
                    android:paddingLeft="-1dp"
                    tools:targetApi="m" />
            </LinearLayout>

            <TextView
                android:layout_marginTop="@dimen/dp5"
                android:id="@+id/tvcontinue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/we_will_send_you_an_one_time_password"
                android:textColor="@color/grey"
                android:textSize="@dimen/sp17"
                app:layout_constraintTop_toBottomOf="@id/tvTop" />

            <TextView
                android:id="@+id/tvTop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/enter_mobile_number"
                android:textColor="@color/black"
                android:textSize="@dimen/sp25"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/btnNext"
                style="@style/App_active_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp30"
                android:text="@string/enter"
                app:layout_constraintTop_toBottomOf="@id/llMobile" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>